新增 tailwindcss、背景

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-body {
+
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -15,7 +17,7 @@ code {
 :root {
   --primary-color: #185ee0;
   --secondary-color: #e6eef9;
-}
+} */
 /* https://codepen.io/havardob/pen/ExVaELV?editors=1100 */
 *,
 *:after,
