--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html, body {
+    font-family: Roboto, 'Noto Sans TC', sans-serif;
+    line-height: 1.5;
+  }
+  a {
+    text-decoration: none;
+    display: block;
+  }
+}
