--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -2,5 +2,7 @@
   .tab:not(.active):first-child::before,
   .tab:(.active) ~ .tab:not(.active)::before {
     transform: translateX(-100%);
+    position: absolute;
+    z-index: 20;
   }
 }
